<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/firstCItem" android:title="Context1" app:showAsAction="always"/>
    <item android:id="@+id/secondCItem" android:title="Context2"/>
    <item android:id="@+id/thirdCItem" android:title="Context3"/>

</menu>